CSS body design
Corrected picture links and started designing the body of the page

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
     <title>Document</title>
 </head>
 <body>
@@ -20,38 +21,38 @@
 
     <div class="Erin-Cronie">
         <p>Hey! I am a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and am excited to put al my skills to use!</p>
-        <img src="responsive-layout-profile.png" alt="Digital photo of a cartoon person">
+        <img src="images/responsive-layout-profile.png" alt="Digital photo of a cartoon person">
     </div>
     <div class="Portfolio">
         <div class="first-column">
 			<h2>Marketing Page</h2>
 			<p>This projet shows the front page of a marketing website meant for a specific business I am interested in.</p>
-			<img src="portfolio-1.pg" alt="Marketing Page">
+			<img src="images/portfolio-1.png" alt="Marketing Page">
 		</div>
         <div class="second-column">
 			<h2>Search Page</h2>
 			<p>This project searches through a specific database to find information that the user is trying to look up.</p>
-			<img src="portfolio-2.pg" alt="Search Page">
+			<img src="images/portfolio-2.png" alt="Search Page">
 		</div>
         <div class="third-column">
 			<h2>Travel App</h2>
 			<p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-			<img src="portfolio-3.pg" alt="Travel App Page">
+			<img src="images/portfolio-3.png" alt="Travel App Page">
 		</div>
         <div class="fourth-column">
 			<h2>Map of Favorite Spots</h2>
 			<p>This project uses mapping apis to plt the points for my favorite spots in the city for a do-it yourself walking tour.</p>
-			<img src="portfolio-4.pg" alt="Map of Favorite Spots">
+			<img src="images/portfolio-4.png" alt="Map of Favorite Spots">
 		</div>
         <div class="fifth-column">
 			<h2>Photo gallery</h2>
 			<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-			<img src="portfolio-5.pg" alt="Photo Gallery">
+			<img src="images/portfolio-5.png" alt="Photo Gallery">
 		</div>
         <div class="sixth-column">
 			<h2>Calculator</h2>
 			<p>Someone can enter in the number they want, and press the big blue button to get the results.</p>
-			<img src="portfolio-6.pg" alt="Calculator Page">
+			<img src="images/portfolio-6.png" alt="Calculator Page">
 		</div>
     </div>
     <div class="contact">
@@ -71,4 +72,4 @@
     </div>
 </footer>
 </body>
-</html>
+</html> 
