Added media queries
working media queries - not finished

--- a/index.html
+++ b/index.html
@@ -5,28 +5,35 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <title>Erin Cronie - Treehouse Unit 2</title>
 </head>
 <body>
-<header>
+
+
+<header class="header">
     <div class="nav-bar">
-    <h1>Erin Cronie</h1>
-        <ul class="nav">
+        <h1 class="my-name">Erin Cronie</h1>
+            <ul class="nav">
             <li><a href="#home">Home</a></li>
             <li><a href="#Portfolio">Portfolio</a></li>
             <li><a href="#Contact">Contact</a></li>
-        </ul>
+            </ul>
     </div>
 </header>
 
-    <div class="Erin-Cronie">
+
+<main>
+    <div class="profile-container">
         <p>Hey! I am a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and am excited to put al my skills to use!</p>
         <img src="images/responsive-layout-profile.png" alt="Digital photo of a cartoon person">
     </div>
     <div class="Portfolio">
         <div class="first-column">
 			<h2>Marketing Page</h2>
-			<p>This projet shows the front page of a marketing website meant for a specific business I am interested in.</p>
+			<p>This project shows the front page of a marketing website meant for a specific business I am interested in.</p>
 			<img src="images/portfolio-1.png" alt="Marketing Page">
 		</div>
         <div class="second-column">
@@ -60,7 +67,7 @@
         <h2>phone: 12345678901</h2>
         <h2>email: erincronie@gmail.com</h2>
     </div>
-
+</main>
 <footer>
     <div class="footer-bar">
     <h3>Erin Cronie</h3>
