--- a/index.html
+++ b/index.html
@@ -27,39 +27,44 @@
 
 <main>
     <div class="profile-container">
+        <img class="profile-pic" src="images/responsive-layout-profile.png" alt="Digital photo of a cartoon person">
         <p>Hey! I am a front-end developer who loves responsive design and css. I recently finished learning front-end web development at Treehouse and am excited to put al my skills to use!</p>
-        <img src="images/responsive-layout-profile.png" alt="Digital photo of a cartoon person">
     </div>
-    <div class="Portfolio">
+    <div class="portfolio">
         <div class="first-column">
-			<h2>Marketing Page</h2>
+            <img src="images/portfolio-1.png" alt="Marketing Page">			<h2>Marketing Page</h2>
 			<p>This project shows the front page of a marketing website meant for a specific business I am interested in.</p>
-			<img src="images/portfolio-1.png" alt="Marketing Page">
+			
 		</div>
         <div class="second-column">
+            <img src="images/portfolio-2.png" alt="Search Page">
 			<h2>Search Page</h2>
 			<p>This project searches through a specific database to find information that the user is trying to look up.</p>
-			<img src="images/portfolio-2.png" alt="Search Page">
+			
 		</div>
         <div class="third-column">
+            <img src="images/portfolio-3.png" alt="Travel App Page">
 			<h2>Travel App</h2>
 			<p>This project compares travel times based on different transportation methods and tells you the best one.</p>
-			<img src="images/portfolio-3.png" alt="Travel App Page">
+			
 		</div>
         <div class="fourth-column">
+            <img src="images/portfolio-4.png" alt="Map of Favorite Spots">
 			<h2>Map of Favorite Spots</h2>
 			<p>This project uses mapping apis to plt the points for my favorite spots in the city for a do-it yourself walking tour.</p>
-			<img src="images/portfolio-4.png" alt="Map of Favorite Spots">
+			
 		</div>
         <div class="fifth-column">
+            <img src="images/portfolio-5.png" alt="Photo Gallery">
 			<h2>Photo gallery</h2>
 			<p>This project shows pictures from a recent trip to the viewer and allows them to easily navigate through photos.</p>
-			<img src="images/portfolio-5.png" alt="Photo Gallery">
+			
 		</div>
         <div class="sixth-column">
+            <img src="images/portfolio-6.png" alt="Calculator Page">
 			<h2>Calculator</h2>
 			<p>Someone can enter in the number they want, and press the big blue button to get the results.</p>
-			<img src="images/portfolio-6.png" alt="Calculator Page">
+			
 		</div>
     </div>
     <div class="contact">
